# Process this file with autoconf to produce a configure script.

# Initialization
AC_INIT([Stanford Timing Interface], [0.0.1], [mandel@stanford.edu], [sti])
AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

# Local definitions
AC_CONFIG_SUBDIRS([client server])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Output the results
AC_CONFIG_FILES([GNUmakefile])
AC_OUTPUT
