## Process this file with automake to produce Makefile.in
AM_CPPFLAGS = -Wall -Werror
bin_PROGRAMS = convert lock memtest
convert_SOURCES = \
    Analog.cpp \
    Analog.h \
    analogRawTableLine.cpp \
    analogRawTableLine.h \
    bitTableLine.cpp \
    bitTableLine.h \
    Board.cpp \
    Board.h \
    dds.cpp \
    dds.h \
    ddsRawChannel.cpp \
    ddsRawChannel.h \
    ddsRawTableLine.cpp \
    ddsRawTableLine.h \
    Digital.cpp \
    Digital.h \
    digitalRawTableLine.cpp \
    digitalRawTableLine.h \
    MainBoard.cpp \
    MainBoard.h \
    convert.cpp \
    stringTableLine.cpp \
    stringTableLine.h \
    types.h \
    utils.cpp \
    utils.h
lock_SOURCES = \
  BiasSupply.cpp \
  BiasSupply.h \
  CsLock.cpp \
  CsLock.h \
  lock.cpp \
  SerialData.cpp \
  SerialData.h \
  SerialDevice.cpp \
  SerialDevice.h \
  types.h
memtest_SOURCES = \
  memtest.cpp \
  types.h \
  utils.cpp \
  utils.h
